--- a/templates/category.html
+++ b/templates/category.html
@@ -143,7 +143,7 @@
                 <div class="collapse" id="submenu6" data-parent="#accordion">
                     <ul class="flex-column pl-2 nav">
                         <li class="nav-item"><a class="nav-link" href="#">모바일 ({{sid2_count['모바일']}})</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/text_board?sid1='IT/과학'&sid2='인터넷/SNS'">인터넷/SNS ({{sid2_count['인터넷/SNS']}})</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/article_board?sid1='IT/과학'&sid2='인터넷/SNS'">인터넷/SNS ({{sid2_count['인터넷/SNS']}})</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">통신/뉴미디어 ({{sid2_count['통신/뉴미디어']}})</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">IT 일반 ({{sid2_count['IT 일반']}})</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">보안/해킹 ({{sid2_count['보안/해킹']}})</a></li>
