--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -68,11 +68,7 @@
                 }
             }
         }
-
-
     </script>
-
-
 {% endblock %}
 
 
@@ -80,7 +76,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="page-header">
-            <h2>텍스트 변환 게시판</h2>
+            <h2>텍스트 변환 게시판 [기사 내용]</h2>
         </div>
     </div>
 
@@ -115,6 +111,34 @@
 
 
     <div class="container-fluid">
+
+
+        <div class="row my-4">
+            <div class="col text-left">
+                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board';">
+            </div>
+
+            {% if article_title is defined %}
+            <div class="card border-dark">
+                <div class="card-body">
+                    <div class="card-title">기사 제목</div>
+
+                    <div clsas="card-text">
+                        <div class="col text-center font-weight-bold">
+                            {{article_title}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+
+            <div class="col text-right">
+                <input type="button" class="btn btn-primary" value="글쓰기" onclick="location.href='/text_board/create?page={{page}}';">
+            </div>
+        </div>
+
+
+
 
         <div class="row">
             <div class="col-2">
@@ -201,7 +225,7 @@
                                     {% set cname_4 = 'fas fa-sort' %}
                                 {% endif %}
                                 </div>
-                                <th style="width : 8%" class="text-center">번호<button class="btn" id="sent_id" onclick="order_text(id,'{{page}}')"><i class='{{cname_1}}'></i></button></th>
+                                <th style="width : 11%" class="text-center">문장 번호<button class="btn" id="sent_id" onclick="order_text(id,'{{page}}')"><i class='{{cname_1}}'></i></button></th>
                                 <th class="text-center">텍스트</th>
                                 <th style="width : 11%" class="text-center">기사 번호<button class="btn" id="article_id" onclick="order_text(id, '{{page}}')"><i class='{{cname_2}}'></i></button></th>
                                 <th style="width : 15%" class="text-center">기사 수집일<button class="btn" id="article_collected_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_3}}'></i></button></th>
@@ -235,13 +259,13 @@
                                 {% endif %}
 
                                 <td class="text-center">{{row.article_id}}</td>
-                                {% if row.article_collected_date == '0000-00-00 00:00:00' %}
+                                {% if row.article_collected_date|string == '1900-01-01 00:00:00' %}
                                     <td class="text-center">-</td>
                                 {% else %}
                                     <td class="text-center">{{row.article_collected_date}}</td>
                                 {% endif %}
 
-                                {% if row.sent_modified_date == '0000-00-00 00:00:00' %}
+                                {% if row.sent_modified_date|string == '1900-01-01 00:00:00' %}
                                     <td class="text-center">-</td>
                                 {% else %}
                                     <td class="text-center">{{row.sent_modified_date}}</td>
@@ -257,12 +281,19 @@
                 {{pagination.links}}
 
 
-                <div class="text-right">
-                    <input type="button" class="btn btn-primary" value="글쓰기" onclick="create_text('{{page}}')">
-                </div>
+            </div>
+        </div>
 
+
+
+        <div class="row">
+            <div class="col text-left">
+                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board';">
             </div>
 
+            <div class="col text-right">
+                <input type="button" class="btn btn-primary" value="글쓰기" onclick="location.href='/text_board/create?page={{page}}';">
+            </div>
         </div>
 
     </div>
