--- a/templates/article_board.html
+++ b/templates/article_board.html
@@ -72,46 +72,35 @@
                 }
             }
         }
-
-
     </script>
+
+
+{% endblock %}
+
+
+{% block nav %}
+    <form class="form-inline" method="get" action="/article_board/search" role="search">
+        <div class="col-md-10">
+            <div class="form-group">
+                <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="기사 제목을 검색해주세요.">
+                <input type="hidden" name="page" value="{{page}}">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" value="검색">
+        </div>
+    </form>
+
+    <ul class="navbar-nav">
+        <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
+        <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
+    </ul>
 {% endblock %}
 
 
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="page-header">
-            <h2>텍스트 변환 게시판 [기사 목록]</h2>
-        </div>
-    </div>
-
-
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark" role="navigation">
-        <div class="container-fluid">
-
-            <form class="form-inline" method="get" action="/article_board/search" role="search">
-                <div class="col-md-10">
-                    <div class="form-group">
-                        <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="기사 제목을 검색해주세요.">
-                        <input type="hidden" name="page" value="{{page}}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="검색">
-                </div>
-            </form>
-
-            <ul class="navbar-nav">
-                <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
-                <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
-            </ul>
-
-        </div>
-    </nav>
-
-
 
     <div class="container-fluid">
 
@@ -177,7 +166,7 @@
                                 <td class="text-center">{{row.article_id}}</td>
 
 
-                                <td><a href="/text_board?article_id={{row.article_id}}">{{row.article_title}}</a></td>
+                                <td><a href="/text_board?article_id={{row.article_id}}&article_board_page={{page}}">{{row.article_title}}</a></td>
 
                                 {% if row.article_uploaded_date|string == '1900-01-01 00:00:00' %}
                                     <td class="text-center">-</td>
@@ -195,8 +184,17 @@
                                 <td class="text-center">{{row.article_sid1}}</td>
                                 <td class="text-center">{{row.article_sid2}}</td>
 
-
+                                <!--
                                 <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="location.replace('/article_board/delete?article_id={{row.article_id}}&page={{page}}');"></td>
+                                -->
+                                <form method="post" action="/article_board/delete">
+                                    <td class="text-center">
+                                        <input type="submit" class="btn btn-danger btn-sm" id="delete" value="삭제">
+                                        <input type="hidden" name="article_id" value="{{row.article_id}}">
+                                        <input type="hidden" name="page" value="{{page}}">
+                                    </td>
+                                </form>
+
                             </tr>
                         {% endfor %}
 
