--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
-                            <div class="flashes">
+                            <div class="flashes my-4">
                                 {% for category, message in messages %}
                                 <p class="{{category}} col-md-6 text-center" style="font-size:20px">{{message}}</p>
                                 {% endfor %}
