--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -4,7 +4,7 @@
     {{super()}}
     <script language="JavaScript">
 
-
+        /*
         function delete_text(id, page){
 
             //location.href = "text_board/" + id + "/delete";
@@ -16,6 +16,7 @@
             location.href = "/text_board/create?page=" + page;      // GET 방식으로 Login.py의 text_create 함수로 전송
             //location.replace("/text_board/create");
         }
+        */
 
         function order_text(id, page){
             // 1 이면 오름차순 정렬
@@ -23,6 +24,7 @@
             var url = $(location).attr('href');
             var asc1_desc0 = getParameterByName(url, 'asc1_desc0');
             var search_msg = getParameterByName(url, 'search_msg');
+            var article_id = getParameterByName(url, 'article_id');
             var before_selected_col = getParameterByName(url, 'col_name');
             var ordering = 1;
 
@@ -42,12 +44,12 @@
             // 검색한 경우 ordering
             if(search_msg){
                 //location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
-                location.replace("/" + 'text_board' + "/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
+                location.replace("/" + 'text_board' + "/order?article_id=" + article_id + "&col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
             }
             // 검색하지 않았을 경우 ordering
             else{
                 //location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
-                location.replace("/" + 'text_board' + "/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
+                location.replace("/" + 'text_board' + "/order?article_id=" + article_id + "&col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
             }
 
 
@@ -69,53 +71,40 @@
             }
         }
     </script>
+
+
+{% endblock %}
+
+{% block nav %}
+    <form class="form-inline" method="get" action="/text_board/search" role="search">
+        <div class="col-md-10">
+            <div class="form-group">
+                <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="텍스트를 검색해주세요.">
+                <input type="hidden" name="page" value="{{page}}">
+                <input type="hidden" name="article_id" value="{{article_id}}">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" value="검색">
+        </div>
+    </form>
+
+    <ul class="navbar-nav">
+        <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
+        <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
+    </ul>
 {% endblock %}
 
 
-
 {% block content %}
-    <div class="container-fluid">
-        <div class="page-header">
-            <h2>텍스트 변환 게시판 [기사 내용]</h2>
-        </div>
-    </div>
-
-
-
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark" role="navigation">
-        <div class="container-fluid">
-
-            <form class="form-inline" method="get" action="/text_board/search" role="search">
-                <div class="col-md-10">
-                    <div class="form-group">
-                        <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="텍스트를 검색해주세요.">
-                        <input type="hidden" name="page" value="{{page}}">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="검색">
-                </div>
-            </form>
-
-            <ul class="navbar-nav">
-                <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
-                <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
-            </ul>
-
-        </div>
-    </nav>
-
-
-
-
 
     <div class="container-fluid">
 
 
         <div class="row my-4">
             <div class="col text-left">
-                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board';">
+                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board?col_name=article_id&page={{article_board_page}}&asc1_desc0=1';">
             </div>
 
             {% if article_title is defined %}
@@ -243,17 +232,17 @@
                                 {% if row.sent_confirm == 1 %}
                                 <td>
                                     {% if search_msg is defined %}
-                                        <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}&search_msg={{search_msg}}">{{row.sent_converted}}</a>
+                                        <a href="/text_board/edit?article_id={{article_id}}&sent_id={{row.sent_id}}&page={{page}}&search_msg={{search_msg}}">{{row.sent_converted}}</a>
                                     {% else %}
-                                        <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}">{{row.sent_converted}}</a>
+                                        <a href="/text_board/edit?article_id={{article_id}}&sent_id={{row.sent_id}}&page={{page}}">{{row.sent_converted}}</a>
                                     {% endif %}
                                 </td>
                                 {% else %}
                                 <td>
                                     {% if search_msg is defined %}
-                                        <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}&search_msg={{search_msg}}">{{row.sent_original}}</a>
+                                        <a href="/text_board/edit?article_id={{article_id}}&sent_id={{row.sent_id}}&page={{page}}&search_msg={{search_msg}}">{{row.sent_original}}</a>
                                     {% else %}
-                                        <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}">{{row.sent_original}}</a>
+                                        <a href="/text_board/edit?article_id={{article_id}}&sent_id={{row.sent_id}}&page={{page}}">{{row.sent_original}}</a>
                                     {% endif %}
                                 </td>
                                 {% endif %}
@@ -272,7 +261,17 @@
                                 {% endif %}
 
                                 <td class="text-center">{{row.sent_converted_count}}</td>
-                                <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="delete_text('{{row.sent_id}}', '{{page}}')"></td>
+                                <!--
+                                <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="location.replace('/text_board/delete?sent_id={{row.sent_id}}&page={{page}}')"></td>
+                                -->
+                                <form method="post" action="/text_board/delete">
+                                    <td class="text-center">
+                                        <input type="submit" class="btn btn-danger btn-sm" id="delete" value="삭제">
+                                        <input type="hidden" name="sent_id" value="{{row.sent_id}}">
+                                        <input type="hidden" name="page" value="{{page}}">
+                                    </td>
+                                </form>
+
                             </tr>
                         {% endfor %}
 
@@ -288,7 +287,7 @@
 
         <div class="row">
             <div class="col text-left">
-                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board';">
+                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board?col_name=article_id&page={{article_board_page}}&asc1_desc0=1';">
             </div>
 
             <div class="col text-right">
