--- a/templates/text_create.html
+++ b/templates/text_create.html
@@ -25,6 +25,14 @@
     </script>
 {% endblock %}
 
+{% block nav %}
+<ul class="navbar-nav ml-auto">
+    <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
+    <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
+</ul>
+{% endblock %}
+
+
 {% block content %}
     <div class="container">
 
@@ -32,7 +40,7 @@
 
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
-                    <div class="flashes">
+                    <div class="flashes my-4">
                         {% for category, message in messages %}
                             <p class="{{category}} text-center" style="font-size:20px">{{message}}</p>
                         {% endfor %}
@@ -40,7 +48,7 @@
                 {% endif %}
             {% endwith %}
 
-            <div class="page-header">
+            <div class="page-header my-4">
                 <h2>새로 등록할 텍스트를 입력해 주세요.</h2>
             </div>
 
