--- a/templates/text_edit.html
+++ b/templates/text_edit.html
@@ -37,6 +37,14 @@
     </script>
 {% endblock %}
 
+{% block nav %}
+<ul class="navbar-nav ml-auto">
+    <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
+    <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
+</ul>
+{% endblock %}
+
+
 
 {% block content %}
     <div class="container">
@@ -46,13 +54,16 @@
         {% else %}
             {% set action = "/text_board?page=" ~ page %}
         {% endif %}
+
+        {% if article_id is defined %}
+            {% set action = action + "&article_id=" ~ article_id %}
+        {% endif %}
+
         <form id="frm" method="post" action={{action}}>
-        <!--
-        <form id="frm" method="post" action="/text_board?page={{page}}?search_msg={{search_msg}}">
-        -->
+
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
-                    <div class="flashes">
+                    <div class="flashes my-4">
                         {% for category, message in messages %}
                             <p class="{{category}} text-center" style="font-size:20px">{{message}}</p>
                         {% endfor %}
@@ -61,7 +72,7 @@
             {% endwith %}
 
 
-            <div class="page-header">
+            <div class="page-header my-4">
                 <h2>변환된 텍스트를 확인하고, 틀린 부분이 있으면 다시 고쳐주세요.</h2>
             </div>
 
