- 기사제목/텍스트 검색창에 아무것도 입력이 안되면 flash 메세지 발생하도록 수정
- article_board 페이지에서 모든 기사 보기 버튼 추가

- navbar에서 현재 페이지의 위치 확인할 수 있도록 nav-item 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,16 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 
+    <script>
+        $(document).ready(function() {
+            //$('.flashes').fadeToggle(4000);
+            setTimeout(function(){
+                $('.flashes').slideUp();
+            }, 2000)
+        });
+
+    </script>
+
     <style>
         html,body{
             height:100%;
@@ -79,6 +89,9 @@
         <div id="content">
 
             <div class="container-fluid">
+
+                {% block flash %}{% endblock %}
+
                 <div class="page-header">
                     <h1>Crawl articles and Convert articles</h1>
                 </div>
