--- a/templates/article_board.html
+++ b/templates/article_board.html
@@ -78,24 +78,29 @@
 {% endblock %}
 
 
-{% block nav %}
-    <form class="form-inline" method="get" action="/article_board/search" role="search">
-        <div class="col-md-10">
-            <div class="form-group">
-                <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="기사 제목을 검색해주세요.">
-                <input type="hidden" name="page" value="{{page}}">
+{% block flash %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="flashes my-4">
+                {% for category, message in messages %}
+                    <p class="{{category}} text-center" style="font-size:20px">{{message}}</p>
+                {% endfor %}
             </div>
-        </div>
+        {% endif %}
+    {% endwith %}
+{% endblock %}
 
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="검색">
-        </div>
-    </form>
 
-    <ul class="navbar-nav">
-        <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
-        <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
-    </ul>
+{% block nav %}
+<ul class="navbar-nav">
+    <li class="nav-item active"><a class="nav-link" href="#">Article Board</a></li>
+    <li class="nav-item"><a class="nav-link disabled" href="#">Sentence Board</a></li>
+</ul>
+
+<ul class="navbar-nav ml-auto">
+    <li class="nav-item"><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
+    <li class="nav-item"><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
+</ul>
 {% endblock %}
 
 
@@ -103,6 +108,28 @@
 {% block content %}
 
     <div class="container-fluid">
+
+        <form class="form-inline my-2" method="get" action="/article_board/search" role="search">
+            <div class="col-md-10">
+                <div class="form-group">
+                    <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="기사 제목을 검색해주세요.">
+                    <input type="hidden" name="page" value="{{page}}">
+                    {% if sid1 is defined and sid2 is defined %}
+                        <input type="hidden" name="sid1" value="{{sid1}}">
+                        <input type="hidden" name="sid2" value="{{sid2}}">
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="검색">
+            </div>
+        </form>
+
+
+
+        <input type="button" class="btn btn-primary my-2" value="모든 기사 보기" onclick="location.href='/article_board';">
+
 
         <div class="row mt-4">
             <div class="col-2">
@@ -166,7 +193,7 @@
                                 <td class="text-center">{{row.article_id}}</td>
 
 
-                                <td><a href="/text_board?article_id={{row.article_id}}&article_board_page={{page}}">{{row.article_title}}</a></td>
+                                <td><a href="/text_board?article_id={{row.article_id}}&article_board_page={{page}}&sid1={{row.article_sid1}}&sid2={{row.article_sid2}}">{{row.article_title}}</a></td>
 
                                 {% if row.article_uploaded_date|string == '1900-01-01 00:00:00' %}
                                     <td class="text-center">-</td>
