--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -75,56 +75,128 @@
 
 {% endblock %}
 
-{% block nav %}
-    <form class="form-inline" method="get" action="/text_board/search" role="search">
-        <div class="col-md-10">
-            <div class="form-group">
-                <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="텍스트를 검색해주세요.">
-                <input type="hidden" name="page" value="{{page}}">
-                <input type="hidden" name="article_id" value="{{article_id}}">
+{% block flash %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="flashes my-4">
+                {% for category, message in messages %}
+                    <p class="{{category}} text-center" style="font-size:20px">{{message}}</p>
+                {% endfor %}
             </div>
-        </div>
+        {% endif %}
+    {% endwith %}
+{% endblock %}
 
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="검색">
-        </div>
-    </form>
+{% block nav %}
+<ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link disabled" href="#">Article Board</a></li>
+    <li class="nav-item active"><a class="nav-link" href="#">Sentence Board</a></li>
+</ul>
 
-    <ul class="navbar-nav">
-        <li><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
-        <li><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
-    </ul>
+<ul class="navbar-nav ml-auto">
+    <li class="nav-item"><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
+    <li class="nav-item"><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
+</ul>
 {% endblock %}
 
 
 {% block content %}
 
     <div class="container-fluid">
-
-
-        <div class="row my-4">
-            <div class="col text-left">
-                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board?col_name=article_id&page={{article_board_page}}&asc1_desc0=1';">
+        <form class="form-inline my-2" method="get" action="/text_board/search" role="search">
+            <div class="col-md-10">
+                <div class="form-group">
+                    <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="텍스트를 검색해주세요.">
+                    <input type="hidden" name="page" value="{{page}}">
+                    <input type="hidden" name="article_id" value="{{article_id}}">
+                </div>
             </div>
 
-            {% if article_title is defined %}
-            <div class="card border-dark">
-                <div class="card-body">
-                    <div class="card-title">기사 제목</div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="검색">
+            </div>
+        </form>
 
-                    <div clsas="card-text">
-                        <div class="col text-center font-weight-bold">
-                            {{article_title}}
+
+
+        {% if article_title is defined %}
+        <div class="row my-4">
+            <div class="col col-2 text-left">
+                {% if article_id is not defined or article_id == 'None' %}
+                    <input type="button" class="btn btn-primary" value="기사 목록으로" onclick="location.href='/article_board';">
+                {% else %}
+                    <input type="button" class="btn btn-primary" value="기사 목록으로" onclick="location.href='/article_board?col_name=article_id&page={{article_board_page}}&asc1_desc0=1&sid1={{sid1}}&sid2={{sid2}}';">
+                {% endif %}
+            </div>
+
+            <div class="col">
+                <div class="row">
+                    <div class="card border-dark mx-1">
+                        <div class="card-body">
+                            <div class="card-title">기사 번호</div>
+
+                            <div clsas="card-text">
+                                <div class="col text-center font-weight-bold">
+                                    {{article_id}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card border-dark mx-1">
+                        <div class="card-body">
+                            <div class="card-title">기사 제목</div>
+
+                            <div clsas="card-text">
+                                <div class="col text-center font-weight-bold">
+                                    {{article_title}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card border-dark mx-1">
+                        <div class="card-body">
+                            <div class="card-title">대분류</div>
+
+                            <div clsas="card-text">
+                                <div class="col text-center font-weight-bold">
+                                    {{sid1}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card border-dark mx-1">
+                        <div class="card-body">
+                            <div class="card-title">소분류</div>
+
+                            <div clsas="card-text">
+                                <div class="col text-center font-weight-bold">
+                                    {{sid2}}
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            {% endif %}
+
+            <div class="col col-2 text-right">
+                <input type="button" class="btn btn-primary" value="글쓰기" onclick="location.href='/text_board/create?page={{page}}';">
+            </div>
+        </div>
+
+        {% else %}
+        <div class="row my-4">
+            <div class="col text-left">
+                <input type="button" class="btn btn-primary" value="기사 목록으로" onclick="location.href='/article_board?col_name=article_id&page={{article_board_page}}&asc1_desc0=1&sid1={{sid1}}&sid2={{sid2}}';">
+            </div>
 
             <div class="col text-right">
                 <input type="button" class="btn btn-primary" value="글쓰기" onclick="location.href='/text_board/create?page={{page}}';">
             </div>
         </div>
+        {% endif %}
 
 
 
@@ -287,7 +359,7 @@
 
         <div class="row">
             <div class="col text-left">
-                <input type="button" class="btn btn-warning" value="기사 목록으로" onclick="location.href='/article_board?col_name=article_id&page={{article_board_page}}&asc1_desc0=1';">
+                <input type="button" class="btn btn-primary" value="기사 목록으로" onclick="location.href='/article_board?col_name=article_id&page={{article_board_page}}&asc1_desc0=1';">
             </div>
 
             <div class="col text-right">
