--- a/templates/article_board.html
+++ b/templates/article_board.html
@@ -28,7 +28,11 @@
             var asc1_desc0 = getParameterByName(url, 'asc1_desc0');
             var search_msg = getParameterByName(url, 'search_msg');
             var before_selected_col = getParameterByName(url, 'col_name');
+            var sid1 = getParameterByName(url, 'sid1');
+            var sid2 = getParameterByName(url, 'sid2');
             var ordering = 1;
+
+
 
             if(id == before_selected_col){
                 if(asc1_desc0 == 1) {
@@ -46,12 +50,12 @@
             // 검색한 경우 ordering
             if(search_msg){
                 //location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
-                location.replace("/" + 'article_board' + "/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
+                location.replace("/" + 'article_board' + "/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg + "&sid1=" + sid1 + "&sid2=" + sid2);
             }
             // 검색하지 않았을 경우 ordering
             else{
                 //location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
-                location.replace("/" + 'article_board' + "/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
+                location.replace("/" + 'article_board' + "/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&sid1=" + sid1 + "&sid2=" + sid2);
             }
 
 
@@ -98,7 +102,7 @@
 </ul>
 
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item"><a class="nav-link" href="#">{{username}}님 접속중...</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">{{user_id}}님 접속중...</a></li>
     <li class="nav-item"><a class="nav-link" href="{{url_for('logout')}}"><i class="fa-blink"><i class="fas fa-sign-out-alt"></i></i> 로그아웃</a></li>
 </ul>
 {% endblock %}
@@ -127,9 +131,9 @@
         </form>
 
 
-
-        <input type="button" class="btn btn-primary my-2" value="모든 기사 보기" onclick="location.href='/article_board';">
-
+        <div class="col-2 my-4">
+            <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+        </div>
 
         <div class="row mt-4">
             <div class="col-2">
@@ -138,7 +142,7 @@
 
 
             <div class="col-10">
-                {{pagination.info}}
+                <!--{{pagination.info}}-->
                 {{pagination.links}}
                     <table class="table table-hover">
                         <thead>
@@ -193,7 +197,7 @@
                                 <td class="text-center">{{row.article_id}}</td>
 
 
-                                <td><a href="/text_board?article_id={{row.article_id}}&article_board_page={{page}}&sid1={{row.article_sid1}}&sid2={{row.article_sid2}}">{{row.article_title}}</a></td>
+                                <td><a href="/text_board?article_id={{row.article_id}}&sid1={{row.article_sid1}}&sid2={{row.article_sid2}}">{{row.article_title}}</a></td>
 
                                 {% if row.article_uploaded_date|string == '1900-01-01 00:00:00' %}
                                     <td class="text-center">-</td>
@@ -234,6 +238,35 @@
             </div>
 
         </div>
+
+
+
+        <!-- Modal -->
+        <div id="myModal" class="modal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">경고</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <p>정말 삭제하시겠습니까?</p>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">아니오</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">예</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-2">
+            <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+        </div>
+
 
     </div>
 
