- 삭제 버튼 눌렀을때 모달창 띄워서 체크해주는 기능 구현

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,11 @@
             background-color:white;
         }
 
+        .modal-dialog {
+            top:50%;
+            margin-top: -150px;
+        }
+
     </style>
 
     {% endblock %}
