--- a/templates/article_board.html
+++ b/templates/article_board.html
@@ -4,21 +4,23 @@
     {{super()}}
     <script language="JavaScript">
 
-        /*
-        function delete_text(id, page){
+        $(document).ready(function(){
 
-            //location.href = "text_board/" + id + "/delete";
-            location.replace("/text_board/delete?sent_id=" + id + "&page=" + page);
+            // 모달창에서 '예'를 클릭하면
+            $(".MyInputClass").click(function(){
+
+                $(".MyFormClass").attr("method", "post");
+                $(".MyFormClass").attr("action", "/article_board/delete");
+                $(".MyFormClass").submit();
+            });
+        });
+
+        function trigger_modal(article_id){
+            $(".modal-footer #hidden_article_id").val(article_id);
+            $("#myModal" + article_id).modal();
         }
 
 
-
-        function create_text(page){
-
-            location.href = "/text_board/create?page=" + page;      // GET 방식으로 Login.py의 text_create 함수로 전송
-            //location.replace("/text_board/create");
-        }
-        */
 
 
         function order_text(id, page){
@@ -79,6 +81,10 @@
     </script>
 
 
+
+
+
+
 {% endblock %}
 
 
@@ -113,33 +119,37 @@
 
     <div class="container-fluid">
 
-        <form class="form-inline my-2" method="get" action="/article_board/search" role="search">
-            <div class="col-md-10">
-                <div class="form-group">
-                    <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="기사 제목을 검색해주세요.">
-                    <input type="hidden" name="page" value="{{page}}">
-                    {% if sid1 is defined and sid2 is defined %}
-                        <input type="hidden" name="sid1" value="{{sid1}}">
-                        <input type="hidden" name="sid2" value="{{sid2}}">
-                    {% endif %}
+        <div class="row">
+            <form class="form-inline my-2" method="get" action="/article_board/search" role="search">
+                <div class="col-md-10">
+                    <div class="form-group">
+                        <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="기사 제목을 검색해주세요.">
+                        <input type="hidden" name="page" value="{{page}}">
+                        {% if sid1 is defined and sid2 is defined %}
+                            <input type="hidden" name="sid1" value="{{sid1}}">
+                            <input type="hidden" name="sid2" value="{{sid2}}">
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="검색">
-            </div>
-        </form>
-
-
-        <div class="col-2 my-4">
-            <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+                <div class="form-group">
+                    <input type="submit" class="btn btn-primary" value="검색">
+                </div>
+            </form>
         </div>
+
+
+        <div class="row my-2">
+            <div class="col-2">
+                <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+            </div>
+        </div>
+
 
         <div class="row mt-4">
             <div class="col-2">
                 {% include 'category.html' ignore missing %}
             </div>
-
 
             <div class="col-10">
                 <!--{{pagination.info}}-->
@@ -216,49 +226,33 @@
                                 <td class="text-center">{{row.article_sid2}}</td>
 
                                 <!--
-                                <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="location.replace('/article_board/delete?article_id={{row.article_id}}&page={{page}}');"></td>
-                                -->
                                 <form method="post" action="/article_board/delete">
+                                -->
+
+                                <!--
+                                <form id="frm">
                                     <td class="text-center">
                                         <input type="submit" class="btn btn-danger btn-sm" id="delete" value="삭제">
                                         <input type="hidden" name="article_id" value="{{row.article_id}}">
                                         <input type="hidden" name="page" value="{{page}}">
                                     </td>
                                 </form>
+                                -->
+                                <td class="text-center">
+                                    <!--
+                                    <input type="button" class="btn btn-danger btn-sm" data-toggle="modal" onclick="aa('{{row.article_id}}')" data-target="#myModal{{row.article_id}}" value="삭제">
+                                    -->
+                                    <input type="button" class="btn btn-danger btn-sm" onclick="trigger_modal('{{row.article_id}}')" value="삭제">
+                                </td>
 
                             </tr>
                         {% endfor %}
+
 
                         </tbody>
                     </table>
                 {{pagination.links}}
 
-
-
-            </div>
-
-        </div>
-
-
-
-        <!-- Modal -->
-        <div id="myModal" class="modal" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">경고</h4>
-                    </div>
-
-                    <div class="modal-body">
-                        <p>정말 삭제하시겠습니까?</p>
-                    </div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">아니오</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">예</button>
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -266,6 +260,34 @@
         <div class="col-2">
             <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
         </div>
+
+
+        {% for row in board_total %}
+        <!-- Modal -->
+        <div id="myModal{{row.article_id}}" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title"><i class="fas fa-exclamation-triangle"></i>경고</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <div class="modal-body">
+                        <p>{{row.article_id}}번 기사를 정말 삭제하시겠습니까?</p>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger mr-auto" data-dismiss="modal">아니오</button>
+                        <form class="MyFormClass">
+                            <input type="submit" class="btn btn-primary MyInputClass" data-dismiss="modal" value="예">
+                            <input type="hidden" name="article_id" id="hidden_article_id" value="">
+                            <input type="hidden" name="page" value="{{page}}">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
 
 
     </div>
