--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -4,19 +4,23 @@
     {{super()}}
     <script language="JavaScript">
 
-        /*
-        function delete_text(id, page){
+        $(document).ready(function(){
 
-            //location.href = "text_board/" + id + "/delete";
-            location.replace("/text_board/delete?sent_id=" + id + "&page=" + page);
+            // 모달창에서 '예'를 클릭하면
+            $(".MyInputClass").click(function(){
+
+                $(".MyFormClass").attr("method", "post");
+                $(".MyFormClass").attr("action", "/text_board/delete");
+                $(".MyFormClass").submit();
+            });
+        });
+
+        function trigger_modal(sent_id){
+            $(".modal-footer #hidden_sent_id").val(sent_id);
+            $("#myModal" + sent_id).modal();
         }
 
-        function create_text(page){
 
-            location.href = "/text_board/create?page=" + page;      // GET 방식으로 Login.py의 text_create 함수로 전송
-            //location.replace("/text_board/create");
-        }
-        */
 
         function order_text(id, page){
             // 1 이면 오름차순 정렬
@@ -103,31 +107,39 @@
 {% block content %}
 
     <div class="container-fluid">
-        <form class="form-inline my-2" method="get" action="/text_board/search" role="search">
-            <div class="col-md-10">
-                <div class="form-group">
-                    <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="텍스트를 검색해주세요.">
-                    <input type="hidden" name="page" value="{{page}}">
-                    <input type="hidden" name="article_id" value="{{article_id}}">
-                </div>
-            </div>
 
-            <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="검색">
-            </div>
-        </form>
+
+        <div class="row">
+            <form class="form-inline my-2" method="get" action="/text_board/search" role="search">
+                <div class="col-md-10">
+                    <div class="form-group">
+                        <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="텍스트를 검색해주세요.">
+                        <input type="hidden" name="page" value="{{page}}">
+                        <input type="hidden" name="article_id" value="{{article_id}}">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" class="btn btn-primary" value="검색">
+                </div>
+            </form>
+        </div>
 
 
 
         {% if article_title is defined %}
         <div class="row my-4">
             <div class="col col-2 text-left">
-                {% if article_id is not defined or article_id == 'None' %}
-                    <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board';">
+                {% if article_id == '0' %}
+                    <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
                 {% else %}
-                    <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1&sid1={{sid1}}&sid2={{sid2}}';">
+                    {% if article_id is not defined or article_id == 'None' %}
+                        <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board';">
+                    {% else %}
+                        <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1&sid1={{sid1}}&sid2={{sid2}}';">
+                    {% endif %}
+                    <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
                 {% endif %}
-                <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
             </div>
 
             <div class="col">
@@ -337,13 +349,21 @@
                                 <!--
                                 <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="location.replace('/text_board/delete?sent_id={{row.sent_id}}&page={{page}}')"></td>
                                 -->
+
+                                <!--
                                 <form method="post" action="/text_board/delete">
                                     <td class="text-center">
                                         <input type="submit" class="btn btn-danger btn-sm" id="delete" value="삭제">
                                         <input type="hidden" name="sent_id" value="{{row.sent_id}}">
                                         <input type="hidden" name="page" value="{{page}}">
+                                        <input type="hidden" name="article_id" value="{{article_id}}">
                                     </td>
                                 </form>
+                                -->
+
+                                <td class="text-center">
+                                    <input type="button" class="btn btn-danger btn-sm" onclick="trigger_modal('{{row.sent_id}}')" value="삭제">
+                                </td>
 
                             </tr>
                         {% endfor %}
@@ -358,16 +378,52 @@
 
 
 
-        <div class="row">
+        <div class="row my-4">
             <div class="col col-2 text-left">
-                <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1';">
-                <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+                {% if article_id == '0' %}
+                    <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+                {% else %}
+                    <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1';">
+                    <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+                {% endif %}
             </div>
 
             <div class="col text-right">
                 <input type="button" class="btn btn-primary" value="글쓰기" onclick="location.href='/text_board/create?page={{page}}';">
             </div>
         </div>
+
+
+
+        {% for row in board_total %}
+        <!-- Modal -->
+        <div id="myModal{{row.sent_id}}" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title"><i class="fas fa-exclamation-triangle"></i>경고</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <div class="modal-body">
+                        <p>{{row.sent_id}}번 문장을 정말 삭제하시겠습니까?</p>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger mr-auto" data-dismiss="modal">아니오</button>
+                        <form class="MyFormClass">
+                            <input type="submit" class="btn btn-primary MyInputClass" data-dismiss="modal" value="예">
+                            <input type="hidden" name="sent_id" id="hidden_sent_id" value="">
+                            <input type="hidden" name="page" value="{{page}}">
+                            <input type="hidden" name="article_id" value="{{article_id}}">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+
+
 
     </div>
 {% endblock %}
