- 문장 분류(전체/숫자 포함/숫자 미포함) 라디오 버튼 Sentence Board에 추가.
- 특정 기사를 클릭했을 때만 문장 필터 라디오 버튼 기능 구현. (기사 전체, 기사 검색 두 상황에도 적용해야함)

--- a/templates/text_edit.html
+++ b/templates/text_edit.html
@@ -55,7 +55,7 @@
             {% set action = "/text_board?page=" ~ page %}
         {% endif %}
 
-        {% if article_id is defined %}
+        {% if article_id is defined and article_id != 'None' %}
             {% set action = action + "&article_id=" ~ article_id %}
         {% endif %}
 
