--- a/templates/article_board.html
+++ b/templates/article_board.html
@@ -103,8 +103,12 @@
 
 {% block nav %}
 <ul class="navbar-nav">
-    <li class="nav-item active"><a class="nav-link" href="#">Article Board</a></li>
-    <li class="nav-item"><a class="nav-link disabled" href="#">Sentence Board</a></li>
+    <li class="nav-item active">
+        <a class="nav-link" href="{{url_for('article_board', page=1, col_name='article_id', asc1_desc0=1)}}">Article Board</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{url_for('text_board', page=1, col_name='sent_id', asc1_desc0=1)}}">Sentence Board</a>
+    </li>
 </ul>
 
 <ul class="navbar-nav ml-auto">
@@ -192,7 +196,7 @@
                                 </div>
 
                                 <th style="width : 11%" class="text-center">기사 번호<button class="btn" id="article_id" onclick="order_text(id,'{{page}}')"><i class='{{cname_1}}'></i></button></th>
-                                <th class="text-center">기사 제목</th>
+                                <th class="text-center">기사 제목 (문장 개수)</th>
                                 <th style="width : 15%" class="text-center">업로드 날짜<button class="btn" id="article_uploaded_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_2}}'></i></button></th>
                                 <th style="width : 15%" class="text-center">수집 날짜<button class="btn" id="article_collected_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_3}}'></i></button></th>
                                 <th style="width : 10%" class="text-center">대분류</th>
@@ -207,7 +211,7 @@
                                 <td class="text-center">{{row.article_id}}</td>
 
 
-                                <td><a href="/text_board?article_id={{row.article_id}}&sid1={{row.article_sid1}}&sid2={{row.article_sid2}}">{{row.article_title}}</a></td>
+                                <td><a href="/text_board?article_id={{row.article_id}}&sid1={{row.article_sid1}}&sid2={{row.article_sid2}}">{{row.article_title}}</a> ({{row.article_sent_count}})</td>
 
                                 {% if row.article_uploaded_date|string == '1900-01-01 00:00:00' %}
                                     <td class="text-center">-</td>
@@ -238,11 +242,11 @@
                                     </td>
                                 </form>
                                 -->
+
                                 <td class="text-center">
-                                    <!--
-                                    <input type="button" class="btn btn-danger btn-sm" data-toggle="modal" onclick="aa('{{row.article_id}}')" data-target="#myModal{{row.article_id}}" value="삭제">
-                                    -->
-                                    <input type="button" class="btn btn-danger btn-sm" onclick="trigger_modal('{{row.article_id}}')" value="삭제">
+                                    {% if row.article_id != 0 %}
+                                        <input type="button" class="btn btn-danger btn-sm" onclick="trigger_modal('{{row.article_id}}')" value="삭제">
+                                    {% endif %}
                                 </td>
 
                             </tr>
