--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -28,6 +28,12 @@
                             alert('사용할 수 있는 아이디 입니다.');
                             $("#sign_up_button_id").prop("disabled", false);
                         }
+                        else if(data == 'empty'){
+                            alert('사용할 아이디를 입력해주십시오.');
+                            $("#sign_up_button_id").prop("disabled", true);
+                            $("#id_id").val('');
+                            $("#id_id").focus();
+                        }
                         else{
                             alert('이미 존재하는 아이디 입니다.');
                             $("#sign_up_button_id").prop("disabled", true);
