--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -13,7 +13,44 @@
                 $(".MyFormClass").attr("action", "/text_board/delete");
                 $(".MyFormClass").submit();
             });
+
+
+            // 다른 라디오 버튼을 클릭하면
+            $("input[name='option']").change(function() {
+                var radio_id = $("input[name='option']:checked").attr('id');
+
+                // 모든 문장
+                if(radio_id == 'option1'){
+                    location.href = '/text_board?article_id={{article_id}}&page=1&col_name=sent_id&asc1_desc0=1';
+                }
+                // 숫자 포함 문장
+                else if(radio_id == 'option2'){
+                    location.href = '/text_board?article_id={{article_id}}&page=1&col_name=sent_id&asc1_desc0=1&inc_num=1';
+                }
+                // 숫자 미포함 문장
+                else if(radio_id == 'option3'){
+                    location.href = '/text_board?article_id={{article_id}}&page=1&col_name=sent_id&asc1_desc0=1&inc_num=0';
+                }
+                else{
+                    alert('오류!');
+                }
+
+            });
+
+
+            if('{{inc_num}}' == 0){
+                $("#option3").prop("checked", true);
+            }
+            else if('{{inc_num}}' == 1){
+                $("#option2").prop("checked", true);
+            }
+            else{
+                $("#option1").prop("checked", true);
+            }
+
         });
+
+
 
         function trigger_modal(sent_id){
             $(".modal-footer #hidden_sent_id").val(sent_id);
@@ -47,12 +84,10 @@
 
             // 검색한 경우 ordering
             if(search_msg){
-                //location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
                 location.replace("/" + 'text_board' + "/order?article_id=" + article_id + "&col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
             }
             // 검색하지 않았을 경우 ordering
             else{
-                //location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
                 location.replace("/" + 'text_board' + "/order?article_id=" + article_id + "&col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
             }
 
@@ -93,8 +128,8 @@
 
 {% block nav %}
 <ul class="navbar-nav">
-    <li class="nav-item"><a class="nav-link disabled" href="#">Article Board</a></li>
-    <li class="nav-item active"><a class="nav-link" href="#">Sentence Board</a></li>
+    <li class="nav-item"><a class="nav-link" href="{{url_for('article_board', page=1, col_name='article_id', asc1_desc0=1)}}">Article Board</a></li>
+    <li class="nav-item active"><a class="nav-link" href="{{url_for('text_board', page=1, col_name='sent_id', asc1_desc0=1)}}">Sentence Board</a></li>
 </ul>
 
 <ul class="navbar-nav ml-auto">
@@ -113,7 +148,7 @@
             <form class="form-inline my-2" method="get" action="/text_board/search" role="search">
                 <div class="col-md-10">
                     <div class="form-group">
-                        <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="텍스트를 검색해주세요.">
+                        <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="문장을 검색해주세요.">
                         <input type="hidden" name="page" value="{{page}}">
                         <input type="hidden" name="article_id" value="{{article_id}}">
                     </div>
@@ -201,8 +236,8 @@
 
         {% else %}
         <div class="row my-4">
-            <div class="col text-left">
-                <input type="button" class="btn btn-primary" value="해당 카테고리 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1&sid1={{sid1}}&sid2={{sid2}}';">
+            <div class="col col-2 text-left">
+                <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1';">
             </div>
 
             <div class="col text-right">
@@ -210,6 +245,24 @@
             </div>
         </div>
         {% endif %}
+
+
+
+        <div class="row">
+            <div class="col-2"></div>
+
+            <label class="btn btn-primary mr-2">
+                <input type="radio" name="option" checked="checked" id="option1" value="모든 문장"> 모든 문장
+            </label>
+
+            <label class="btn btn-primary mr-2">
+                <input type="radio" name="option" id="option2" value="숫자 포함 문장"> 숫자 포함 문장
+            </label>
+
+            <label class="btn btn-primary">
+                <input type="radio" name="option" id="option3" value="숫자 미포함 문장"> 숫자 미포함 문장
+            </label>
+        </div>
 
 
 
@@ -300,10 +353,10 @@
                                 {% endif %}
                                 </div>
                                 <th style="width : 11%" class="text-center">문장 번호<button class="btn" id="sent_id" onclick="order_text(id,'{{page}}')"><i class='{{cname_1}}'></i></button></th>
-                                <th class="text-center">텍스트</th>
+                                <th class="text-center">문장</th>
                                 <th style="width : 11%" class="text-center">기사 번호<button class="btn" id="article_id" onclick="order_text(id, '{{page}}')"><i class='{{cname_2}}'></i></button></th>
                                 <th style="width : 15%" class="text-center">기사 수집일<button class="btn" id="article_collected_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_3}}'></i></button></th>
-                                <th style="width : 15%" class="text-center">텍스트 편집일<button class="btn" id="sent_modified_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_4}}'></i></button></th>
+                                <th style="width : 15%" class="text-center">문장 편집일<button class="btn" id="sent_modified_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_4}}'></i></button></th>
                                 <th style="width : 11%" class="text-center">수정 횟수<button class="btn" id="sent_converted_count" onclick="order_text(id, '{{page}}')"><i class='{{cname_5}}'></i></button></th>
                                 <th></th>
                             </tr>
@@ -380,10 +433,14 @@
 
         <div class="row my-4">
             <div class="col col-2 text-left">
-                {% if article_id == '0' %}
-                    <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+                {% if article_title is defined %}
+                    {% if article_id == '0' %}
+                        <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+                    {% else %}
+                        <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1';">
+                        <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
+                    {% endif %}
                 {% else %}
-                    <input type="button" class="btn btn-primary btn-block" value="해당 카테고리 목록" onclick="location.href='/article_board?col_name=article_id&page=1&asc1_desc0=1';">
                     <input type="button" class="btn btn-primary btn-block my-2" value="모든 기사 목록" onclick="location.href='/article_board?page=1&col_name=article_id&asc1_desc0=1';">
                 {% endif %}
             </div>
