- export 기능 구현 (진행중)

--- a/templates/article_board.html
+++ b/templates/article_board.html
@@ -120,8 +120,13 @@
     <li class="nav-item active">
         <a class="nav-link" href="{{url_for('article_board', page=1, col_name='article_id', asc1_desc0=1)}}">Article Board</a>
     </li>
+
     <li class="nav-item">
         <a class="nav-link" href="{{url_for('text_board', page=1, col_name='sent_id', asc1_desc0=1)}}">Sentence Board</a>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link" href="{{url_for('export')}}">Export</a>
     </li>
 </ul>
 
